--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "helmet": "^3.22.0",
-    "joi": "^13.1.0"
+    "joi": "^13.1.0",
+    "morgan": "^1.10.0"
   }
 }
