--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-demo",
+  "name": "vidly",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,12 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "config": "^3.3.1",
-    "debug": "^4.1.1",
-    "express": "^4.17.1",
-    "helmet": "^3.22.0",
-    "joi": "^13.1.0",
-    "morgan": "^1.10.0",
-    "pug": "^2.0.4"
+    "express": "^4.16.2",
+    "joi": "^13.1.0"
   }
 }
